Add TestClassFile