@@ -5,8 +5,8 @@ plugins {
 group = 'de.yoyosource'
 version = '1.0-SNAPSHOT'
 
-sourceCompatibility = 21
-targetCompatibility = 21
+sourceCompatibility = "23.PREVIEW"
+targetCompatibility = "23.PREVIEW"
 
 repositories {
     mavenCentral()
@@ -15,4 +15,8 @@ repositories {
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
+}
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
 }
